@@ -1,4 +1,5 @@
 0.07
+ - Update Module::Install to 1.19 version.
 
 0.06 2015-09-16T14:59:35+02:00
  - Improve SEE ALSO section in doc.
